fix title alignment card descriptions

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,13 +1,13 @@
 .about {
   margin-left: var(--margin-text);
-  margin-right: var(--margin-text)
+  margin-right: var(--margin-text);
+  margin-bottom: 0;
 }
 
 .about-me {
   display: flex; 
   justify-content: center; 
   align-items: center; 
-
 }
 
 .about-content {
