--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -74,6 +74,10 @@ p {
   text-align: justify;
 }
 
+a {
+  margin: 0;
+}
+
 h1 {
   font-size: var(--primary-title-font-size);
 }
